# phywave-mcux-bsp

./: .gitignore  README.md
cmake/: armgcc.cmake  erase.jcmd  flash.jcmd  framework.cmake  mrproper.cmake  nxp-kw-base.cmake  pb-daplink.cmake  pb-jlink.cmake  reset.jcmd
drivers/ccs811/: ccs811.c  ccs811.h  ccs811_shell.c  ccs811_shell.h
drivers/hdc1010/: hdc1010.c  hdc1010.h  hdc1010_shell.c  hdc1010_shell.h
drivers/i2c/: i2c_wrapper.c  i2c_wrapper.h
drivers/pn-athena/: adc_soc.c  adc_soc.h  board.c  board.h  clock_config.c  clock_config.h  gpio_pins.c  gpio_pins.h  periph.h  pin_mux.c  pin_mux.h
drivers/ssd1673/: ssd1673.c  ssd1673.h  ssd1673_shell.c  ssd1673_shell.h
drivers/tcs37727/: tcs37727.c  tcs37727.h  tcs37727_internal.h  tcs37727_shell.c  tcs37727_shell.h
examples/epd_test/: CMakeLists.txt  README.md
examples/epd_test/src/: FreeRTOSConfig.h  app_preinclude.h  epaper.c
examples/phynode_base/: CMakeLists.txt  README.md
examples/phynode_base/src/: app_preinclude.h  phynode_base.c
examples/phynode_ble/: CMakeLists.txt  README.md
examples/phynode_ble/src/: app.c  app.h  app_config.c  app_preinclude.h  gatt_db.h  gatt_uuid128.h
middleware/yafg/: yafg.c  yafg.h  yafg_glyphs.h
tools/: gen_glyphs.py
